k8s/local/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - node-sample.local
      secretName: tls-secret  # This references the secret with the TLS cert
  rules:
    - host: node-sample.local
      http:
        paths:
          - path: /api/contract-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ns-contract-service
                port:
                  number: 80
          - path: /api/client-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ns-client-service
                port:
                  number: 81
